--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <p class="mb-2">الكابتن <strong>محمد إسماعيل</strong> – المشرف العام على الأكاديميات.</p>
       <p class="mb-2">الكابتن <strong>هيثم مجاهد</strong> – مدير الأكاديمية.</p>
       <p class="mb-2">الأستاذ <strong>أيمن الشريعي</strong> – رئيس نادي إنبي، بدعم من مجلس الإدارة.</p>
+      <p class="mb-2">الكابتن <strong>عماد جابر</strong> – رئيس قطاع الناشين .</p>
       <p class="mb-2">جميع التدريبات تتم تحت إشراف مباشر من الكابتن <strong>محمد إسماعيل</strong>.</p>
     </section>
 
