--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Pricing Section -->
     <section class="bg-gray-50 py-12 fade-in">
       <div class="max-w-6xl mx-auto px-4">
-        <h2 class="text-2xl font-bold text-blue-900 mb-6 text-center">تفاصيل الاشتراك</h2>
+        <h2 class="text-2xl font-bold text-blue-900 mb-6 text-center">تفاصيل الاشتراك الربع سنوي</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
           <div class="bg-white p-6 rounded-xl shadow text-center">
             <h3 class="text-xl font-bold text-yellow-600 mb-2">غير الأعضاء</h3>
